V02_Alignment fix

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body::before {
+  display: block;
+  content: "";
+  height: 60px;
+}
+
+
+
 .header {
   height: 100dvh;
 }
